10% finalizado
Simulacion semanal les va a funcionar pero el algoritmo NO REPLANIFICA. y esta solo haciendo SOLUCION HEURISTICA.

Por ende es rapido, pero no sirve para colapso ni para operacion diaria. Esto lo estoy actualizando hoy.